# TRAILBOT

circle_marker/: package.xml  setup.cfg  setup.py
circle_marker/circle_marker/: circle_marker_node.py
gazebo/config/: nav2_params.yaml  rviz_config.rviz
gazebo/launch/: bringup_cartographer_launch.py
human_detection/human_detection/: human_detection_marker_node.py
husky/husky_base/config/: imu_visualizer.py
husky/husky_description/urdf/: husky_macro.urdf.xacro
nav/: CMakeLists.txt  setup.py
tracking3d/human_detection/: LidarCameraSubscriber.py
trailbot_bringup/launch/: nav.launch.py
